remove carritow funcionando

--- a/views/partials/headerLog.ejs
+++ b/views/partials/headerLog.ejs
@@ -27,7 +27,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/auth/profile">Mi perfil</a>
-                        <a class="dropdown-item" href="#">Mis publicaciones</a>
+                        <a class="dropdown-item" href="/myPublications">Mis publicaciones</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/auth/logout">Cerrar Sesion</a>
                     </div>
@@ -53,7 +53,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/profile">Mi perfil</a>
-                            <a class="dropdown-item" href="#">Mis publicaciones</a>
+                            <a class="dropdown-item" href="/myPublications">Mis publicaciones</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/auth/logout">Cerrar Sesión</a>
                         </div>
