Agrego archivo storage.js

--- a/views/shop-cart.ejs
+++ b/views/shop-cart.ejs
@@ -21,7 +21,7 @@
             <% for( let i = 0; i < carrito.length; i++ ) { %>
             
             <!--Primer Producto en el carro-->
-            <article class="cart-row Product_cart col-12">
+            <article class="prod Product_cart col-12" id="prod">
                 <div class="cart-items item-cart">
                     <div class="media align-items-center p-3 d-flex justify-content-between">
                         <!--imagen - link a producto-->
