--- a/views/partials/headerGuest.ejs
+++ b/views/partials/headerGuest.ejs
@@ -66,8 +66,9 @@
                             <a class="dropdown-item" href="#">Promociones</a>
                             <a class="dropdown-item" href="#">Alquileres</a>
                             <a class="dropdown-item" href="#">Merchandesing</a>
-                            <a class="dropdown-item" href="#">Insumos</a>
-                            <a class="dropdown-item" href="#">Cursos</a>
+                            <a class="dropdown-item" href="#bebidas">Bebidas</a>
+                            <a class="dropdown-item" href="#insumos">Insumos</a>
+                            <a class="dropdown-item" href="#cursos">Cursos</a>
                             <a class="dropdown-item" href="#">Podcast</a>
                         </div>
                     </li>
@@ -110,8 +111,9 @@
                         <a class="dropdown-item" href="#">Promociones</a>
                         <a class="dropdown-item" href="#">Alquileres</a>
                         <a class="dropdown-item" href="#">Merchandesing</a>
-                        <a class="dropdown-item" href="#">Insumos</a>
-                        <a class="dropdown-item" href="#">Cursos</a>
+                        <a class="dropdown-item" href="#bebidas">Bebidas</a>
+                        <a class="dropdown-item" href="#insumos">Insumos</a>
+                        <a class="dropdown-item" href="#cursos">Cursos</a>
                         <a class="dropdown-item" href="#">Podcast</a>
                     </div>
                 </li>
