--- a/views/partials/headerLog.ejs
+++ b/views/partials/headerLog.ejs
@@ -27,7 +27,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/auth/profile">Mi perfil</a>
-                        <a class="dropdown-item" href="/myPublications">Mis publicaciones</a>
+                        <a class="dropdown-item" href="/products/publications">Mis publicaciones</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/auth/logout">Cerrar Sesion</a>
                     </div>
@@ -53,7 +53,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/profile">Mi perfil</a>
-                            <a class="dropdown-item" href="/myPublications">Mis publicaciones</a>
+                            <a class="dropdown-item" href="/products/publications">Mis publicaciones</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/auth/logout">Cerrar Sesión</a>
                         </div>
@@ -77,8 +77,9 @@
                             <a class="dropdown-item" href="#">Promociones</a>
                             <a class="dropdown-item" href="#">Alquileres</a>
                             <a class="dropdown-item" href="#">Merchandesing</a>
-                            <a class="dropdown-item" href="#">Insumos</a>
-                            <a class="dropdown-item" href="#">Cursos</a>
+                            <a class="dropdown-item" href="#bebidas">Bebidas</a>
+                            <a class="dropdown-item" href="#insumos">Insumos</a>
+                            <a class="dropdown-item" href="#cursos">Cursos</a>
                             <a class="dropdown-item" href="#">Podcast</a>
                         </div>
                     </li>
@@ -119,8 +120,9 @@
                         <a class="dropdown-item" href="#">Promociones</a>
                         <a class="dropdown-item" href="#">Alquileres</a>
                         <a class="dropdown-item" href="#">Merchandesing</a>
-                        <a class="dropdown-item" href="#">Insumos</a>
-                        <a class="dropdown-item" href="#">Cursos</a>
+                        <a class="dropdown-item" href="#bebidas">Bebidas</a>
+                        <a class="dropdown-item" href="#insumos">Insumos</a>
+                        <a class="dropdown-item" href="#cursos">Cursos</a>
                         <a class="dropdown-item" href="#">Podcast</a>
                     </div>
                 </li>
