--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,12 +9,12 @@
         >
             <div class="row minh-100 d-flex mt-5 mb-5">
                 <div
-                    class="card mb-3 pt-5 pr-5 pl-5 pb-4"
+                    class="card mb-5 pt-5 pr-5 pl-5 pb-4"
                     style="max-width: 550px;"
                 >
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img 
+                            <img
                                 src="/avatar/<%= user.avatar %>"
                                 class="card-img"
                                 alt="user"
@@ -27,12 +27,12 @@
                         <div class="col-md-8">
                             <div class="card-body pt-0 pl-4">
                                 <h4 class="card-title">
- 
                                     <%= user.nombre +" "+ user.apellido %>
                                 </h4>
                                 <div class="dropdown-divider"></div>
                                 <p class="card-email">
-                                    <i class="fas fa-mail-bulk"></i> <%= user.email %>
+                                    <i class="fas fa-mail-bulk"></i> <%=
+                                    user.email %>
                                 </p>
                                 <p class="card-text">
                                     <small class="text-muted"
@@ -59,32 +59,77 @@
                                 </button>
                             </a>
 
-                            <form action= "/auth/delete/<%= user.id %>" method="POST">
-                                <button type="button" class="btn btn-outline-danger ml-2 " style="font-size: 0.8em;" data-toggle="modal" data-target="#staticBackdrop" data-backdrop="false" data-dismiss="modal">
+                            <form
+                                action="/auth/delete/<%= user.id %>"
+                                method="POST"
+                            >
+                                <button
+                                    type="button"
+                                    class="btn btn-outline-danger ml-2"
+                                    style="font-size: 0.8em;"
+                                    data-toggle="modal"
+                                    data-target="#staticBackdrop"
+                                    data-backdrop="false"
+                                    data-dismiss="modal"
+                                >
                                     <i class="far fa-edit"></i> Eliminar perfil?
                                 </button>
                                 <!-- Modal -->
-                                    <div class="modal" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title" id="staticBackdropLabel">Eliminar Publicación</h5>
-                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
-                                                    </button>
-                                                </div>
-                                                <div class="modal-body text-center">
-                                                ¿ Estas seguro que deseas eliminar tu cuenta? <br>
-                                                ¡Vas a desaparecer de la faz de la tierra!
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                                                    <button type="submit" class="btn btn-primary">Si</button>
-                                                </div>
+                                <div
+                                    class="modal"
+                                    id="staticBackdrop"
+                                    data-backdrop="static"
+                                    data-keyboard="false"
+                                    tabindex="-1"
+                                    role="dialog"
+                                    aria-labelledby="staticBackdropLabel"
+                                    aria-hidden="true"
+                                >
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5
+                                                    class="modal-title"
+                                                    id="staticBackdropLabel"
+                                                >
+                                                    Eliminar Publicación
+                                                </h5>
+                                                <button
+                                                    type="button"
+                                                    class="close"
+                                                    data-dismiss="modal"
+                                                    aria-label="Close"
+                                                >
+                                                    <span aria-hidden="true"
+                                                        >&times;</span
+                                                    >
+                                                </button>
+                                            </div>
+                                            <div class="modal-body text-center">
+                                                ¿ Estas seguro que deseas
+                                                eliminar tu cuenta? <br />
+                                                ¡Vas a desaparecer de la faz de
+                                                la tierra!
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button
+                                                    type="button"
+                                                    class="btn btn-secondary"
+                                                    data-dismiss="modal"
+                                                >
+                                                    No
+                                                </button>
+                                                <button
+                                                    type="submit"
+                                                    class="btn btn-primary"
+                                                >
+                                                    Si
+                                                </button>
                                             </div>
                                         </div>
                                     </div>
-                            </form>    
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
