--- a/views/inexistent.ejs
+++ b/views/inexistent.ejs
@@ -4,13 +4,13 @@
     <body class="bg_color">
         <%- include("partials/header") %>
 
-        <section class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn">
+        <section class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn m-5">
             <div class="card mb-5 mt-5" style="width: 20rem;">
-                <img src="https://media1.tenor.com/images/dcce44122c287cdee16b1e880d49d094/tenor.gif?itemid=7855872" class="card-img-top p-2" alt="...">
+                <h1 class="alert text-warning text-center mt-5"><i class="fas fa-exclamation-triangle"></i></h1>
                 <div class="card-body">
-                <h5 class="card-title">Usuario no registado</h5>
-                <p class="card-text">Te invitamos a registrarte, para poder ser parte de esta comunidad Cervecera!</p>
-                <div class="mt-5 mb-2">
+                <h5 class="card-title text-center text-muted">Usuario no Registado</h5>
+                <p class="card-text text-center text-muted">Te invitamos a registrarte, para poder ser parte de esta comunidad Cervecera!</p>
+                <div class="mt-5 mb-2 d-flex aling-items-center">
                 <a href="/auth/register" class="btn btn-outline-warning m-auto"> <i class="far fa-user-circle"></i> Regitrate!</a>
                 
                 </div>
