--- a/views/notPermission.ejs
+++ b/views/notPermission.ejs
@@ -4,12 +4,12 @@
     <body class="bg_color">
         <%- include("partials/header") %>
 
-        <section class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn">
+        <section class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn m-5">
             <div class="card mb-5 mt-5" style="width: 20rem;">
-                <img src="https://media1.tenor.com/images/138aed5d9c9056183cd874bc8dd31979/tenor.gif?itemid=9628120" class="card-img-top p-2" alt="...">
+                <h1 class="alert text-warning text-center mt-5"><i class="fas fa-exclamation-triangle"></i></h1>
                 <div class="card-body">
-                <h5 class="card-title">No tienes accesos</h5>
-                <p class="card-text">...no tenes nada que hacer acá, anda a registrarte!</p>
+                <h5 class="card-title text-center text-muted">No tienes Acceso</h5>
+                <p class="card-text text-center text-muted">Para poder Vender primero necesitamos que te Registres e Inicies Sesión</p>
                 <div class="mt-5 mb-2">
                 <a href="/auth/register" class="btn btn-outline-warning mr-2"> <i class="far fa-user-circle"></i> Regitrate!</a>
                 <a href="/auth/login" class="btn btn-outline-secondary ml-2"> <i class="far fa-user-circle"></i> inicia Sesión!</a>
