--- a/views/partials/body_newsletter.ejs
+++ b/views/partials/body_newsletter.ejs
@@ -1,67 +1,74 @@
 <section class="bg-warning p-0 m-0">
-  <div class="container d-flex flex-wrap">
-    <div class="row w-100 m-auto">
-      <div
-        class="box-n-left col-lg-3 col-md-3 d-md-flex d-none align-items-end justify-content-start"
-      >
-        <a class="navbar-brand d-flex" href="/">
-          <img
-            src="/img/newsletter/pic_01.png"
-            width="120"
-            class="d-inline-block align-top"
-            alt="Canilla Libre"
-          />
-        </a>
-      </div>
-      <div class="col-lg-6 col-md-9 col-sm-12 col-xs-12 pb-4">
-        <div class="categorias-title">
-          <h2 class="title_categoria border-bottom">
-            Estar siempre a la vanguardia
-          </h2>
-          <p class="text-dark">
-            Elegí como queres que te mantengamos informado con promociones,
-            cursos o nuevos productos
-          </p>
-        </div>
-        <div class="input-group">
-          <input
-            type="text"
-            class="form-control border-secondary"
-            aria-label="enviar"
-            placeholder="ingresa tu e-mail"
-          />
-          <div class="input-group-append">
-            <button
-              class="btn btn-secondary dropdown-toggle"
-              type="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
+    <div class="container d-flex flex-wrap">
+        <div class="row w-100 m-auto">
+            <div
+                class="box-n-left col-lg-3 col-md-3 d-md-flex d-none align-items-end justify-content-start"
             >
-              Selecciona y envía
-            </button>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Promociones</a>
-              <a class="dropdown-item" href="#">Cursos</a>
-              <a class="dropdown-item" href="#">Nuevos Productos</a>
-              <div role="separator" class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Todo lo anterior</a>
+                <a class="navbar-brand d-flex" href="/">
+                    <img
+                        src="/img/newsletter/pic_01.png"
+                        width="120"
+                        class="d-inline-block align-top"
+                        alt="Canilla Libre"
+                    />
+                </a>
             </div>
-          </div>
+            <div class="col-lg-6 col-md-9 col-sm-12 col-xs-12 pb-4">
+                <div class="categorias-title">
+                    <h2 class="title_categoria newsletter">
+                        Estar siempre a la vanguardia
+                    </h2>
+                    <p class="text-dark">
+                        Elegí como queres que te mantengamos informado con
+                        promociones, cursos o nuevos productos
+                    </p>
+                </div>
+                <div class="input-group">
+                    <input
+                        type="text"
+                        class="form-control border-secondary"
+                        aria-label="enviar"
+                        placeholder="ingresa tu e-mail"
+                    />
+                    <div class="input-group-append">
+                        <button
+                            class="btn btn-secondary dropdown-toggle"
+                            type="button"
+                            data-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                        >
+                            Selecciona y envía
+                        </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Promociones</a>
+                            <a class="dropdown-item" href="#">Cursos</a>
+                            <a class="dropdown-item" href="#"
+                                >Nuevos Productos</a
+                            >
+                            <div
+                                role="separator"
+                                class="dropdown-divider"
+                            ></div>
+                            <a class="dropdown-item" href="#"
+                                >Todo lo anterior</a
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div
+                class="box-n-right col-lg-3 col-md-3 d-lg-flex d-none align-items-end justify-content-end"
+            >
+                <a class="navbar-brand d-flex" href="/">
+                    <img
+                        src="/img/newsletter/pic_02.png"
+                        width="120"
+                        class="d-inline-block align-top"
+                        alt="Canilla Libre"
+                    />
+                </a>
+            </div>
         </div>
-      </div>
-      <div
-        class="box-n-right col-lg-3 col-md-3 d-lg-flex d-none align-items-end justify-content-end"
-      >
-        <a class="navbar-brand d-flex" href="/">
-          <img
-            src="/img/newsletter/pic_02.png"
-            width="120"
-            class="d-inline-block align-top"
-            alt="Canilla Libre"
-          />
-        </a>
-      </div>
     </div>
-  </div>
 </section>
