--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,8 +1,18 @@
 <title><%= title %> - Canilla Libre - BeerMarket®</title>
 
 <!--favicon-->
-<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png" />
+<link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="/img/favicon/favicon-32x32.png"
+/>
+<link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="/img/favicon/favicon-16x16.png"
+/>
 <link rel="manifest" href="/img/favicon/site.webmanifest" />
 <link
     rel="mask-icon"
@@ -17,6 +27,12 @@
     href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
     rel="stylesheet"
 />
+<!--Googlefont NUNITO 300-400-700-->
+<link
+    href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;700&display=swap"
+    rel="stylesheet"
+/>
+<!--Googlefont DANCING 300-400-700-->
 <link
     href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap"
     rel="stylesheet"
