--- a/views/partials/headerGuest.ejs
+++ b/views/partials/headerGuest.ejs
@@ -1,8 +1,6 @@
 <header class="nav-header">
-    <div class="navborder pl-4 pr-4 bg-light">
+    <div class="navborder bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
-
-
             <!--search / xl-->
             <div class="d-flex justify-content-end align-items-center w-100 ml-auto ">
                 <a class="navbar-brand mr-auto" href="/">
@@ -86,7 +84,7 @@
         </nav>
     </div>
     <!--search header mobile-->
-    <div class="input-group mb-3 col box-2 bg-light pl-4 pr-4 bg-light">
+    <div class="input-group mb-3 col box-2 bg-light bg-light">
         <input type="text" class="form-control" placeholder="que queres tomar?" aria-label="buscador"
             aria-describedby="search_header">
         <div class="input-group-append">
@@ -96,7 +94,7 @@
     </div>
 
     <!--nav md-xl-->
-    <div class="prueba d.flex justify-content-end pl-4 pr-4 bg-light">
+    <div class="navbar_inf d.flex justify-content-end bg-light">
         <nav class="navbar navbar-expand-md navbar-light bg-light d-none d-md-block">
             <ul class="navbar-nav ml-auto d-flex justify-content-end align-items-center">
                 <li class="nav-item dropdown">
