--- a/views/partials/headerLog.ejs
+++ b/views/partials/headerLog.ejs
@@ -1,8 +1,8 @@
 <header class="nav-header">
-    <div class="navborder pl-4 pr-4 bg-light">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
+    <div class="navborder bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex" >
             <!--search / xl-->
-            <div class="d-flex justify-content-end align-items-center w-100 ml-auto ">
+            <div class="d-flex justify-content-end align-items-center w-100">
                 <a class="navbar-brand mr-auto" href="/">
                     <img src="/img/header/logo_header.svg" width="120" class="d-inline-block align-top"
                         alt="Canilla Libre">
@@ -96,7 +96,7 @@
         </nav>
     </div>
     <!--search header mobile-->
-    <div class="input-group mb-3 col box-2 bg-light pl-4 pr-4 bg-light">
+    <div class="input-group mb-3 col box-2 bg-light bg-light">
         <input type="text" class="form-control" placeholder="que queres tomar?" aria-label="buscador"
             aria-describedby="search_header">
         <div class="input-group-append">
@@ -105,7 +105,7 @@
         </div>
     </div>
     <!--nav md-xl-->
-    <div class="prueba d.flex justify-content-end pl-4 pr-4 bg-light">
+    <div class="navbar_inf d.flex justify-content-end bg-light" >
         <nav class="navbar navbar-expand-md navbar-light bg-light d-none d-md-block">
             <ul class="navbar-nav ml-auto d-flex justify-content-end align-items-center">
                 <li class="nav-item dropdown">
@@ -141,4 +141,5 @@
             </ul>
         </nav>
     </div>
+
 </header>
