--- a/views/partials/body_products.ejs
+++ b/views/partials/body_products.ejs
@@ -1,16 +1,17 @@
-<div class="box-6 rounded col-12 col-sm-6 col-lg-3">
+<div class="box-6 rounded col-12 col-sm-6 col-lg-2">
     <a href="/products/<%=product.id%>">
-        <div class="image m-auto">  
-            <img src="/upload/<%=product.imagen%>" alt="imagen">
-        </div>    
-        <div class="info row d-flex flex-wrap align-items-baseline justify-content-center">
+        <div class="image m-auto">
+            <img src="/upload/<%=product.imagen%>" alt="imagen" />
+        </div>
+        <div
+            class="info row d-flex flex-wrap align-items-baseline justify-content-center"
+        >
             <h5 class="col-12">$ <%=product.precioUnitario%></h5>
-            <h6 class="col-12"><i class="fas fa-tag"></i> <%=product.descuento%> <i class="fas fa-percentage"></i> OFF</h6>
+            <h6 class="col-12">
+                <i class="fas fa-tag"></i> <%=product.descuento%>
+                <i class="fas fa-percentage"></i> OFF
+            </h6>
             <p class="col-12"><%=product.nombre%></p>
         </div>
     </a>
 </div>
-
-
-
-            
