--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -92,7 +92,7 @@
                                                     class="modal-title"
                                                     id="staticBackdropLabel"
                                                 >
-                                                    Eliminar Publicación
+                                                    Eliminar Perfil
                                                 </h5>
                                                 <button
                                                     type="button"
