--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,17 +8,7 @@
     <!--header-->
     <%- include("partials/header") %>
 
-      <!--VALIDATION-->
-      <% if (typeof errors != "undefined") { %>
-      <p>ERROR</p>
-      <ul>
-        <% for (let i=0; i<errors.length;i++) { %>
-        <li>
-          <%= errors[i].msg %>
-        </li>
-        <% } %>
-      </ul>
-      <% } %>
+      
 
     <!--login-->
     <!-- Section es todo el contenedor -->
@@ -30,11 +20,20 @@
           action="/auth/login"
           method="POST"
           onsubmit= "return validarUsuario()"
-          
-          
-          
         >
-          <div class="register-title col-12">
+
+            <!--VALIDATION-->
+            <div class="text-muted text-center">
+            <% if (typeof errors != "undefined") { %>
+                <p class="errors text-info p-0 m-0">express - validator</p>
+                <% for (let i=0; i<errors.length;i++) { %>
+                <small class=" p-0 m-0">
+                    <%= errors[i].msg %>
+                </small>
+                <% } %>
+                <% } %>
+            </div>
+          <div class="register-title col-12 mt-3">
             <h2 class="title_categoria">
               <i class="far fa-user-circle text-black-50"></i> Ingresa a tu
               cuenta
