--- a/views/shop-cart.ejs
+++ b/views/shop-cart.ejs
@@ -1,140 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
+    <%- include("partials/head", {title: "Registro"}) %>
 
-<%- include("partials/head", {title: "Registro"}) %>
+    <body class="bg_color">
+        <!--header/javi -->
+        <%- include("partials/header") %>
 
+        <!-- carrito/javi-->
 
+        <!-- carrito/javi-->
+        <section class="container bg-white mt-5 mb-5 rounded-top">
+            <div class="row">
+                <!--Titulo-->
+                <article class="col-12 text-center mt-3">
+                    <h2 class="title_categoria border-bottom">
+                        <i class="fas fa-shopping-cart text-secondary"></i> -
+                        Carrito
+                    </h2>
+                </article>
+                <div class="dropdown-divider"></div>
+                <% for( let i = 0; i < carrito.length; i++ ) { %>
 
-<body class="bg_color">
-    <!--header/javi -->
-    <%- include("partials/header") %>
-
-    <!-- carrito/javi-->
-
-    <!-- carrito/javi-->
-    <section class="container bg-white mb-5 rounded-top">
-        <div class="row">
-            <!--Titulo-->
-            <article class="col-12 text-center mt-3">
-                <h2 class="title_categoria border-bottom">
-                    <i class="fas fa-shopping-cart text-secondary"></i> - Carrito
-                </h2>
-            </article>
-            <div class="dropdown-divider"></div>
-            <% for( let i = 0; i < carrito.length; i++ ) { %>
-
-            <!--Primer Producto en el carro-->
-            <article class="prod Product_cart col-12" id="tablaprod">
-                <div class="cart-items item-cart" id="prod2">
-                    <div class="media align-items-center p-3 d-flex justify-content-between">
-                        <!--imagen - link a producto-->
-                        <a class="col-2 col-md-2 ml-2" href="/products/<%= carrito[i].id %>">
-                            <img id="imagen_producto" src="/upload/<%= carrito[i].imagen %>" class="mr-3 w-100"
-                                alt="<%= carrito[i].nombre  %>" />
-                        </a>
-                        <div class="col-7 media-body border-left pl-4">
-                            <h5 class="mt-0"><%= carrito[i].nombre  %></h5>
-                            <small class="form-text text-muted"><%= carrito[i].descripcion  %></small>
-                            <h6 class="mt-0 text-info"><%= carrito[i].ibu %></h6>
-                        </div>
-                        <!--cantidad-->
-                        <div class="col-1 d-flex justify-content-center">
-                            <form class="cantidad_item rounded" action="cantidad_item" method="POST">
-                                <small id="" class="form-text text-muted">Cantidad</small>
-                                <div class="def-number-input number-input safari_only">
-                                    <input type="number" class="form-control" style="width: 80px" id="cantidad"
-                                        value="1" min="1" />
-                                </div>
-                            </form>
-                        </div>
-                        <!--precio-->
-                        <div class="col-1 justify-content-end">
-                            <div class="price_item">
-                                <div class="price_uni_item">
-                                    <small class="form-text text-muted">Precio</small>
-                                    <p class="cart-price price_tag_total p-2 rounded bg-transparent mb-0"
-                                        style="width: 100px" id="precio"> <%= carrito[i].precioUnitario %></p>
+                <!--Primer Producto en el carro-->
+                <article class="prod Product_cart col-12" id="tablaprod">
+                    <div class="cart-items item-cart" id="prod2">
+                        <div
+                            class="media align-items-center p-3 d-flex justify-content-between"
+                        >
+                            <!--imagen - link a producto-->
+                            <a
+                                class="col-2 col-md-2 ml-2"
+                                href="/products/<%= carrito[i].id %>"
+                            >
+                                <img
+                                    id="imagen_producto"
+                                    src="/upload/<%= carrito[i].imagen %>"
+                                    class="mr-3 w-100"
+                                    alt="<%= carrito[i].nombre  %>"
+                                />
+                            </a>
+                            <div class="col-7 media-body border-left pl-4">
+                                <h5 class="mt-0"><%= carrito[i].nombre %></h5>
+                                <small class="form-text text-muted"
+                                    ><%= carrito[i].descripcion %></small
+                                >
+                                <h6 class="mt-0 text-info">
+                                    <%= carrito[i].ibu %>
+                                </h6>
+                            </div>
+                            <!--cantidad-->
+                            <div class="col-1 d-flex justify-content-center">
+                                <form
+                                    class="cantidad_item rounded"
+                                    action="cantidad_item"
+                                    method="POST"
+                                >
+                                    <small id="" class="form-text text-muted"
+                                        >Cantidad</small
+                                    >
+                                    <div
+                                        class="def-number-input number-input safari_only"
+                                    >
+                                        <input
+                                            type="number"
+                                            class="form-control"
+                                            style="width: 80px;"
+                                            id="cantidad"
+                                            value="1"
+                                            min="1"
+                                        />
+                                    </div>
+                                </form>
+                            </div>
+                            <!--precio-->
+                            <div class="col-1 justify-content-end">
+                                <div class="price_item">
+                                    <div class="price_uni_item">
+                                        <small class="form-text text-muted"
+                                            >Precio</small
+                                        >
+                                        <p
+                                            class="cart-price price_tag_total p-2 rounded bg-transparent mb-0"
+                                            style="width: 100px;"
+                                            id="precio"
+                                        >
+                                            <%= carrito[i].precioUnitario %>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <!--descuento-->
-                        <div class="col-1 justify-content-end">
-                            <div id="precio" class="price_item">
-                                <div class="price_uni_item">
-                                    <small class="form-text text-muted">Descuento</small>
-                                    <p class="price_tag_total p-2 rounded bg-transparent mb-0" style="width: 100px"
-                                        id="descuento">% <%= carrito[i].descuento %></p>
+                            <!--descuento-->
+                            <div class="col-1 justify-content-end">
+                                <div id="precio" class="price_item">
+                                    <div class="price_uni_item">
+                                        <small class="form-text text-muted"
+                                            >Descuento</small
+                                        >
+                                        <p
+                                            class="price_tag_total p-2 rounded bg-transparent mb-0"
+                                            style="width: 100px;"
+                                            id="descuento"
+                                        >
+                                            % <%= carrito[i].descuento %>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <!--total-->
-                        <div class="col-1 justify-content-end">
-                            <div id="precio" class="price_item">
-                                <div class="price_uni_item">
-                                    <small class="form-text text-muted">Total</small>
-                                    <p class="cart-total-price price_tag_total p-2 rounded bg-transparent mb-0"
-                                        style="width: 100px" id="total"></p>
-
+                            <!--total-->
+                            <div class="col-1 justify-content-end">
+                                <div id="precio" class="price_item">
+                                    <div class="price_uni_item">
+                                        <small class="form-text text-muted"
+                                            >Total</small
+                                        >
+                                        <p
+                                            class="cart-total-price price_tag_total p-2 rounded bg-transparent mb-0"
+                                            style="width: 100px;"
+                                            id="total"
+                                        ></p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="col-1 media-body justify-content-end">
-                            <form action="/carrito/<%= carrito[i].id %> /delete?_method=delete" method="POST">
-                                <button type="submit" class="btn btn-warning">
-                                    <span class="glyphicon glyphicon-remove"></span> <i class="far fa-trash-alt"></i>
-                                </button>
-                            </form>
+                            <div class="col-1 media-body justify-content-end">
+                                <form
+                                    action="/carrito/<%= carrito[i].id %> /delete?_method=delete"
+                                    method="POST"
+                                >
+                                    <button
+                                        type="submit"
+                                        class="btn btn-warning"
+                                    >
+                                        <span
+                                            class="glyphicon glyphicon-remove"
+                                        ></span>
+                                        <i class="far fa-trash-alt"></i>
+                                    </button>
+                                </form>
+                            </div>
                         </div>
-
+                        <div class="dropdown-divider"></div>
                     </div>
-                    <div class="dropdown-divider"></div>
-                </div>
-            </article>
-            <% } %>
-            <article class="price_total media col-12 col-sm-12 p-3 justify-content-center border-bottom">
-                <div class="col-11 col-lg-10 col-sm-4 text-right">
-                    
-                    <h6 class="text-info">Descuento <strong>20%</strong></h6>
-                    <h4 class="mt-0 text-warning">Total</h4>
-                </div>
-                <div class="col-1 col-lg-2 col-sm-4 text-left border-left">
-                    
-                    <h6 class="text-info" id="totalDescuento"><strong>$ 623.20</strong></h6>
-                    <h4 class="mt-0 text-warning" id="totalCompra">$</h4>
-                </div>
-            </article>
+                </article>
+                <% } %>
+                <article
+                    class="price_total media col-12 col-sm-12 p-3 justify-content-center border-bottom"
+                >
+                    <div class="col-11 col-lg-10 col-sm-4 text-right">
+                        <h4 class="mt-0 text-warning">Total</h4>
+                    </div>
+                    <div class="col-1 col-lg-2 col-sm-4 text-left border-left">
+                        <h4 class="mt-0 text-warning" id="totalCompra">$</h4>
+                    </div>
+                </article>
 
-            <article class="comprar media bg-warning col-12 col-sm-12 p-3 ml-auto align-items-center rounded-bottom">
-                <div class="w-100 d-flex justify-content-center">
-                    <!-- boton comprar -->
-                    <button type="submit" class="btn btn-light d-flex" id="submit">Comprar</button>
-                </div>
-            </article>  
+                <article
+                    class="comprar media bg-warning col-12 col-sm-12 p-3 ml-auto align-items-center rounded-bottom"
+                >
+                    <div class="w-100 d-flex justify-content-center">
+                        <!-- boton comprar -->
+                        <button
+                            type="submit"
+                            class="btn btn-light d-flex"
+                            id="submit"
+                        >
+                            Comprar
+                        </button>
+                    </div>
+                </article>
+            </div>
+        </section>
 
-        </div>
-    </section>
+        <!--footer/fran -->
+        <%- include("partials/footer") %>
 
+        <script src="/js/storage.js"></script>
 
-    <!--footer/fran -->
-    <%- include("partials/footer") %>
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"
+        ></script>
 
-    <script src="/js/storage.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
-
-    <script src=" https://unpkg.com/sweetalert/dist/sweetalert.min.js "></script>
-
-
-</body>
-
+        <script src=" https://unpkg.com/sweetalert/dist/sweetalert.min.js "></script>
+    </body>
 </html>
