maquetado vistas notPermission / inexistent

--- a/views/inexistent.ejs
+++ b/views/inexistent.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include("partials/head", {title: "no no no!"}) %>
+    <%- include("partials/head", {title: "Usuario inexistente"}) %>
     <body class="bg_color">
         <%- include("partials/header") %>
 
-        <section class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn m-5">
+        <section class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn mt-5 mb-5 ml-auto mr-auto">
             <div class="card mb-5 mt-5" style="width: 20rem;">
                 <h1 class="alert text-warning text-center mt-5"><i class="fas fa-exclamation-triangle"></i></h1>
                 <div class="card-body">
