--- a/views/team.ejs
+++ b/views/team.ejs
@@ -4,39 +4,61 @@
     <body class="bg_color">
         <%- include("partials/header") %>
 
-        <section class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn mt-5 mb-5 ml-auto mr-auto">
-            <div class="card mb-5 mt-5 p-5" style="width: 800px;">
+        <section
+            class="container d-flex justify-content-center aling-items-center rounded animate__animated animate__bounceIn mt-5 mb-5 ml-auto mr-auto"
+        >
+            <div class="card mb-5 mt-5 p-5" style="width: 600px;">
                 <div class="register-title col-12">
                     <h2 class="title_categoria text-secondary">
                         <i class="far fa-smile-wink"></i> Nosotros
                     </h2>
-                  </div>
-                  <div class="dropdown-divider"></div>
+                </div>
+                <div class="dropdown-divider"></div>
                 <ul class="list-unstyled">
                     <li class="media my-4 mb-3">
-                        <img src="/avatar/franco_martin.jpg" width="60" class="mr-3 rounded-circle" alt="franco_martin">
-                      <div class="media-body">
-                        <h5 class="mt-0 mb-1">Franco Martin</h5>
-                        El Carilindo, buen compañero y siempre con el mate listo!. También conocido como el de las <strong>novedades</strong>, como por ejemplo: "chicos tengo COVID", "CHICOS VOY A SER PAPÁ"...
-                      </div>
+                        <img
+                            src="/avatar/franco_martin.jpg"
+                            width="60"
+                            class="mr-3 rounded-circle"
+                            alt="franco_martin"
+                        />
+                        <div class="media-body">
+                            <h5 class="mt-0 mb-1">Franco Martin</h5>
+                            El Carilindo, buen compañero y siempre con el mate
+                            listo!. También conocido como el de las
+                            <strong>novedades</strong>, como por ejemplo:
+                            "chicos tengo COVID", "CHICOS VOY A SER PAPÁ"...
+                        </div>
                     </li>
                     <div class="dropdown-divider"></div>
                     <li class="media my-4 mb-3">
-                        <img src="/avatar/diego_ratti.jpg" width="60" class="mr-3 rounded-circle" alt="diego_ratti">
-                      <div class="media-body">
-                        <h5 class="mt-0 mb-1">Diego Ratti</h5>
-                        El Contador, calculador como pocos, está al día para decirte "mira que en el sprint, dice...". Buen compañero y excelente administrador de tareas.
-                      </div>
+                        <img
+                            src="/avatar/diego_ratti.jpg"
+                            width="60"
+                            class="mr-3 rounded-circle"
+                            alt="diego_ratti"
+                        />
+                        <div class="media-body">
+                            <h5 class="mt-0 mb-1">Diego Ratti</h5>
+                            El Contador, calculador como pocos, está al día para
+                            decirte "mira que en el sprint, dice...". Buen
+                            compañero y excelente administrador de tareas.
+                        </div>
                     </li>
                     <div class="dropdown-divider"></div>
                     <li class="media my-4">
-                      <img src="/avatar/avatar-1595132127388.jpg" width="60" class="mr-3 rounded-circle" alt="javier_solaripaz">
-                      <div class="media-body">
-                        <h5 class="mt-0">Javier Solari Paz</h5>
-                        ...undefined...
-                      </div>
+                        <img
+                            src="/avatar/avatar-1595132127388.jpg"
+                            width="60"
+                            class="mr-3 rounded-circle"
+                            alt="javier_solaripaz"
+                        />
+                        <div class="media-body">
+                            <h5 class="mt-0">Javier Solari Paz</h5>
+                            ...undefined...
+                        </div>
                     </li>
-                  </ul>
+                </ul>
             </div>
         </section>
         <!--footer-->
