modificacion vistas de detalle de productos para que aprezcan botones de comprar para usuarios no logueados

--- a/views/detail_cursos.ejs
+++ b/views/detail_cursos.ejs
@@ -60,7 +60,7 @@
                 </div>
 
                <!-- carrito y compras -->
-                    <% if (user != null && user.email !== product.usuario.email) { %>
+                    <% if (user == null ||  user.email !== product.usuario.email) { %>
                        <%- include("partials/shopButtons") %>
                      <% } %>
                 <!--detalle de curso-->
