alerta de email en uso

--- a/views/emailExists.ejs
+++ b/views/emailExists.ejs
@@ -11,7 +11,7 @@
                 <h5 class="card-title text-center text-muted">El email ingresado ya se encuentra Registrado</h5>
                 <p class="card-text text-center text-muted">Si no recordas la contraseña mandanos una paloma mensajera para mejorar el sitio!</p>
                 <div class="mt-5 mb-2 d-flex aling-items-center">
-                <a href="/auth/register" class="btn btn-outline-warning m-auto"> <i class="far fa-user-circle"></i> Regitrate!</a>
+                <a href="/auth/login" class="btn btn-outline-warning m-auto"> <i class="far fa-user-circle"></i> Logueate! </a>
                 
                 </div>
             </div>
