--- a/views/partials/body_ofertas.ejs
+++ b/views/partials/body_ofertas.ejs
@@ -1,4 +1,4 @@
-<section id="ofertas">
+<section id="ofertas d-flex justify-content-center">
     <div class="categorias-title">
         <h2 class="title_categoria border-bottom">Ofertas</h2>
     </div>
